[gd_scene load_steps=2 format=3 uid="uid://c57tb01pwcru3"]

[ext_resource type="Script" uid="uid://bdoj7n24a5ce" path="res://scripts/options_menu.gd" id="1_liyum"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_liyum")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.17254902, 0.17254902, 0.18431373, 0.54509807)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_top = 60.0
offset_right = -60.0
offset_bottom = 500.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 23
text = "Options"
horizontal_alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="VolumeValueLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
min_value = -40.0
max_value = 0.0
step = 0.5

[node name="Label2" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="FovValueLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Field Of View"

[node name="FovSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
min_value = 60.0
max_value = 120.0
value = 60.0

[node name="Label3" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="FullscreenCheck" type="CheckBox" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="Label4" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="VsyncCheck" type="CheckBox" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Vsync"

[node name="Label5" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="SensitivityValueLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Sensitivity"

[node name="SensitivitySlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
min_value = 0.001
max_value = 0.01
step = 0.001
value = 0.001

[node name="Label6" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Back"
